# strategiaIA-web

./: .replit  Dockerfile  README.md  app.py  chat_utils.py  index.html  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt  vite.config.js
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.github/workflows/: azure-static-web-apps-calm-glacier-0359a981e.yml  main_app-strategia-web.yml  main_app-strategia-wsp.yml
.local/state/replit/agent/: repl_state.json
.upm/: store.json
instance/: strategia.db
src/: App.jsx  pyvenv.cfg
src/components/: Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  Methodology.jsx  Services.jsx
src/contexts/: ScrollContext.jsx
static/css/: style.css
static/js/: main.js
templates/: base.html  blog.html  blog_post.html  citas.html  error.html  index.html
